   - The IView and IDefaultViewName were moved to zope.publisher.interfaces.

   - The IResource was moved to zope.app.publisher.interfaces.

   - IContextDependent, IPresentation, IPresentationRequest,
     IResourceFactory, IViewFactory were removed completely.

     If you used IViewFactory in context of zope.app.form, there's now
     IWidgetFactory in the zope.app.form.interfaces instead.

- Added a pure-Python 'hookable' implementation, for use when
  'zope.hookable' is not present.

- Removed use of 'zope.deferredimport' by breaking import cycles.

- Cleanup package documentation and changelog a bit. Add sphinx-based
  documentation building command to the buildout.

- Remove deprecated code.

- Change package's mailing list address to zope-dev at zope.org, because
  zope3-dev at zope.org is now retired.

3.5.1 (2008-07-25)
==================

- Fix bug introduced in 3.5.0: <utility factory="..."> no longer supported
  interfaces declared in Python and always wanted an explicit provides="..."
  attribute. https://bugs.launchpad.net/zope3/+bug/251865

3.5.0 (2008-07-25)
==================

- Support registration of utilities via factories through the component registry
  and return factory information in the registration information. This fixes
  https://bugs.launchpad.net/zope3/+bug/240631

- Optimized un/registerUtility via storing an optimized data structure for
  efficient retrieval of already registered utilities. This avoids looping over
  all utilities when registering a new one.

3.4.0 (2007-09-29)
==================

No further changes since 3.4.0a1.

3.4.0a1 (2007-04-22)
====================

Corresponds to zope.component from Zope 3.4.0a1.

- In the Zope 3.3.x series, ``zope.component`` was simplified yet once
  more.  See http://wiki.zope.org/zope3/LocalComponentManagementSimplification
  for the proposal describing the changes.

3.2.0.2 (2006-04-15)
====================

- Fix packaging bug:  'package_dir' must be a *relative* path.
